--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-polyfill": "^6.26.0",
     "concurrently": "^4.0.1",
     "cors": "^2.8.5",
+    "cypress": "^3.8.3",
     "express": "^4.16.4",
     "moxios": "^0.4.0",
     "react": "^16.6.1",
@@ -24,7 +25,9 @@
     "test": "react-scripts test",
     "test:coverage": "npm run test -- --coverage",
     "format": "prettier --write \"**/*.+(js|json|css)\"",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:ci": "cypress run --record --parallel",
+    "cypress": "cypress open"
   },
   "eslintConfig": {
     "extends": "react-app"
