--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "test:coverage": "npm run test -- --coverage",
     "format": "prettier --write \"**/*.+(js|json|css)\"",
     "eject": "react-scripts eject",
-    "cypress:ci": "cypress run --record --parallel",
-    "cypress": "cypress open"
+    "cypress": "cypress",
+    "cy:run": "cypress run  --record --key $key --parallel ",
+    "test:cypress": "start-server-and-test start http://localhost:3000 cy:run"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -59,6 +60,7 @@
     "react-test-renderer": "^16.6.3",
     "redux-mock-store": "^1.5.3",
     "sinon": "^7.1.1",
+    "start-server-and-test": "^1.10.8",
     "wdio-mocha-framework": "^0.6.4",
     "wdio-selenium-standalone-service": "0.0.12",
     "wdio-spec-reporter": "^0.1.5",
