--- a/.github/workflows/feature-branch.yml
+++ b/.github/workflows/feature-branch.yml
@@ -28,8 +28,10 @@ jobs:
     with:
       record: true
       parallel: true
-        env:
-          # pass the Dashboard record key as an environment variable
-          CYPRESS_RECORD_KEY: ${{ secrets.cypress_key }}
+      start: npm start
+      wait-on: http://localhost:3000
+    env:
+      # pass the Dashboard record key as an environment variable
+      CYPRESS_RECORD_KEY: ${{ secrets.cypress_key }}
       # env: 
       #   key: ${{ secrets.cypress_key }}
