--- a/.github/workflows/cypress-test.yml
+++ b/.github/workflows/cypress-test.yml
@@ -34,3 +34,14 @@ jobs:
           env:
       # pass the Dashboard record key as an environment variable
             CYPRESS_RECORD_KEY: ${{ secrets.cypress_key }}  
+        - uses: actions/upload-artifact@v1
+          if: failure()
+          with:
+            name: cypress-screenshots
+            path: cypress/screenshots
+        # Test run video was always captured, so this action uses "always()" condition
+        - uses: actions/upload-artifact@v1
+          if: always()
+          with:
+            name: cypress-videos
+            path: cypress/videos
