--- a/.github/workflows/cypress-test.yml
+++ b/.github/workflows/cypress-test.yml
@@ -10,7 +10,7 @@ jobs:
         # the actual items in the array do not matter,
         # just the number - to force CI to sping 3 copies
         # of the current job in parallel
-        machines: [1, 2, 3]
+        machines: [1]
     steps:
         - name: Checkout
           uses: actions/checkout@v1
@@ -33,7 +33,7 @@ jobs:
             start: npm start
           env:
       # pass the Dashboard record key as an environment variable
-            CYPRESS_RECORD_KEY: ${{ secrets.cypress_key }}  
+            CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}  
         - uses: actions/upload-artifact@v1
           if: failure()
           with:
