--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 
 # testing
 /coverage
+.nyc_output
 
 # production
 /build
@@ -20,6 +21,5 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-cypress/integration/examples
 cypress/videos
 cypress/screenshots
